django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  labels:
    app: django
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: django
        image: ghanatava/auth-backend
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: static
          mountPath: /app/static
      volumes:
      - name: static
        persistentVolumeClaim:
          claimName: static-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP  # Corrected 'potocol' to 'protocol'
    port: 8000
    targetPort: 8000
